--- a/SkyRadar/app/src/main/AndroidManifest.xml
+++ b/SkyRadar/app/src/main/AndroidManifest.xml
@@ -11,6 +11,18 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <!-- Alarm permissions -->
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+
+    <!-- Notification permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+    <!-- Wake lock permission -->
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
+
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -34,6 +46,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Alarm receiver -->
+        <receiver android:name=".alarm.view.AlarmReceiver"/>
     </application>
 
 </manifest>
