--- a/SkyRadar/app/src/main/AndroidManifest.xml
+++ b/SkyRadar/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
     <!-- Wake lock permission -->
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
+    <!-- Alarm service -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
 
 
 
@@ -29,6 +33,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".MyApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SkyRadar"
@@ -47,7 +52,15 @@
             </intent-filter>
         </activity>
         <!-- Alarm receiver -->
-        <receiver android:name=".alarm.view.AlarmReceiver"/>
+        <receiver android:name=".alarm.view.AlarmReceiver" />
+        <receiver android:name=".alarm.view.AlarmStopReceiver" />
+
+        <!-- Alarm service -->
+        <service
+            android:name=".alarm.view.AlarmService"
+            android:exported="false"
+            android:foregroundServiceType="mediaPlayback" />
+
     </application>
 
 </manifest>
